<resources>
    <string name="app_name">Радуга</string>
    <string name="app_name_full">Праздник Радуга</string>
    <string name="main_image_title">Радуга баннер</string>
    <string name="animators">Аниматоры</string>
    <string name="shows">Шоу-программы</string>
    <string name="masters">Мастер классы</string>
    <string name="thematic_party">Тематические вечеринки</string>
    <string name="price">Цены</string>
    <string name="contacts">Контакты</string>
    <string name="phone" translatable="false">+7 (916) 762 08 18</string>
    <string name="main_activity">Главная</string>
    <string name="nav_open_drawer">Открыть меню навигации</string>
    <string name="nav_close_drawer">Закрыть меню навигации</string>
    <string name="main_content_title">Наши выгодные предложения по проведению детских
        праздников</string>
    <string name="main_content">\ В нашем арсенале масса идей для самых разных событий! Мы организуем
        восхитительный День Рождения, наколдуем волшебный Новый год и таинственный Хэллоуин, устроим
        8 марта и 23 февраля, а также множество других праздников. Дети надолго сохранят яркие
        воспоминания о торжестве, проведённом вместе с нами!</string>
    <string name="main_content_title2">Проведение детского дня рождения в Москве</string>
    <string name="main_content2">\ За время нашей работы мы набрались уникального опыта организации
        детских праздников. И теперь ответственно заявляем, что проводим самые лучшие мероприятия
        для детей!\n Мы выезжаем в любую точку Москвы и Московской области со своими костюмами,
        декорациями, игровым реквизитом и с отличным настроением!</string>
    <string name="additional">Дополнительные услуги</string>
    <string name="seasons">Сезонные праздники</string>
    <string name="email" translatable="false">prazdnikraduga@bk.ru</string>
    <string name="vk" translatable="false">https://vk.com/raduga_moscow</string>
    <string name="mobile_app">Мобильное приложение Праздник Радуга</string>
    <string name="all_animators">Все</string>
    <string name="game">Игровые</string>
    <string name="mult">Мультяшные</string>
    <string name="real">Реалистичные</string>
    <string name="fairy">Сказочные</string>
    <string name="superhero">Супергерои</string>
    <string name="order">Заказать</string>
    <string name="share">Поделиться</string>
    <string name="animator_image">Фото аниматора</string>
    <string name="category_image">Изображение категории</string>
    <string name="in_browser">Показать в браузере</string>
    <string name="share_url_animator">Мне понравился аниматор</string>
    <string name="share_url_show">Мне понравилось</string>
    <string name="share_url_master">Мне понравился мастер класс</string>
    <string name="share_url_additional">Мне понравилась дополнительная услуга</string>
    <string name="share_url_thematic">Мне понравилась</string>
    <string name="share_url_season">Мне понравился сезонный праздник</string>
    <string name="tmnt_title">Черепашки нинзя</string>
    <string name="captain_title">Капитан Крюк</string>
    <string name="batman_title">Бетмен</string>
    <string name="pirates_title">Пираты</string>
    <string name="angry_birds_title">Злые птички</string>
    <string name="tmnt_content">\ Возвращаясь, с опасного задания, наши супергерои придут на праздник
        уже полностью экипированными. В их арсенале будут спрятаны заманчивые игры, забавные 
        конкурсы, энергичные эстафеты и остроумные ребусы. Они не только знают всё о развлечениях, 
        но и готовы увлечь детей в настоящее захватывающее приключение.\n А самое главное – наши
        герои активно ищут себе помощников. И каждый ребёнок, пройдя весёлый курс обучения, станет 
        частью отважной команды супергероев!</string>
    <string name="captain_content">\ Бесстрашный Капитан Крюк всю жизнь провёл в поисках знаменитой
        страны вечного детства – Нетландии. А когда попал туда, увидел озорного и дерзкого мальчишку
        Питера Пэна, который сразу ему не понравился. Но потом, получше узнав друг друга, они
        помирились. Теперь отважный мореплаватель знает, как найти подход к детям!\n Вместе с нашим
        героем ребята отправятся прямо в сказочную Нетландию, но на их пути будут встречаться самые
        неожиданные испытания. Детей ждут увлекательные игры и конкурсы, а также остроумные шуточки
        от чудаковатого капитана!</string>
    <string name="batman_content">\ Все знают, что Бетмен появляется только в тот момент, когда его
        позовут. Но детский праздник - исключение! Он появится там на удивление ребятам, сделав им
        большой сюрприз. И обязательно раскроет все секреты безудержного веселья!\n Отважный супергерой
        подготовил интереснейшие игры, конкурсы и эстафеты, которые помогут каждому ребёнку проявить
        свою силу, ловкость и находчивость. И, конечно же, все дети научатся главному оружию против
        злодеев - искреннему смеху!</string>
    <string name="pirates_content">\ На всех детей в одно мгновение повеет сильный солёный бриз, и
        каждый почувствует морской дух приключений! Корабль, на котором дети отправятся в путешествие,
        будет неугомонно носиться по волнам, то и дело попадая в настоящие шторма веселья.
        \n Захватывающие конкурсы, настоящие пиратские игры, золотой блеск монет и задорный смех –
        всё это ждёт ребят после того, как на празднике появятся наши отважные герои!</string>
    <string name="angry_birds_content">\ Наши весёлые птицы с боевым характером точно знают толк в
        играх, ведь они – герои чуть ли не самой знаменитой игры «Angry Birds». С ними дети
        непременно проверят свою меткость, испытают собственную смелость, покажут ловкость, смекалку
        и находчивость. Ребят будут ждать захватывающие птичьи эстафеты и прикольные конкурсы!
        \n Озорные Энгри Бердз увлекут детей в свой энергичный мир, где нет места скуке и
        спокойствию! Уж если кто и знает, как веселиться, так это именно наши бойкие птички!</string>
    <string name="tmnt_url" translatable="false">https://prazdnik-raduga.ru/animators/animatory-cherepashki-nindzya/</string>
    <string name="captain_url" translatable="false">https://prazdnik-raduga.ru/animators/animator-kapitan-kryuk/</string>
    <string name="batman_url" translatable="false">https://prazdnik-raduga.ru/animators/animator-batman/</string>
    <string name="pirates_url" translatable="false">https://prazdnik-raduga.ru/animators/animatory-piraty/</string>
    <string name="angry_birds_url" translatable="false">https://prazdnik-raduga.ru/animators/animatory-zlye-ptichki/</string>
    <string name="s_bubbles_title">Шоу мыльных пузырей</string>
    <string name="s_chemistry_title">Химическое шоу</string>
    <string name="s_paper_title">Бумажное шоу</string>
    <string name="s_tesla_title">Тесла шоу</string>
    <string name="s_fire_title">Фаер шоу</string>
    <string name="s_bubbles_content">\n\ Чудесные облака из пузырьков пронесутся прямо над головами
        детишек и даже окутают их с ног до головы. Малыши весело закружатся в этой радужной мыльной
        буре! И каждый почувствует себя настоящим героем доброй сказки.\n Взрослые уже с трудом
        представляют, насколько радостно бегать и прыгать, лопая прозрачные шары. Но для ребёнка
        такое огромное количество пузырей разных форм и размеров станет по-настоящему волшебным
        событием!</string>
    <string name="s_chemistry_content">\n\ Наше праздничное представление удивит каждого ребёнка,
        подарив ему неописуемый восторг! Когда ещё можно будет увидеть начное шоу собственными
        глазами? Дети с радостью окунутся в необычайный мир химии и полюбят его с первого взгляда!\n
        На таком шоу точно никто не будет скучать. Детский смех и улыбки станут добрыми друзьями
        нашего представления! Но самое главное – дети познакомятся с удивительно красивой наукой.
        Праздник будет не только весёлым, но и познавательным!</string>
    <string name="s_paper_content">\n\ Горы тонкой белоснежной стружки и моря конфетти в один момент
        взметнутся ввысь и окутают всех вокруг своей беспросветной пеленой. Всё вокруг внезапно
        потеряет свои очертания, и торжество вмиг будет окутано бумажной бурей!\n Мы не раз
        устраивали такие представления и точно знаем: каждый ребёнок будет в восторге! С какой
        радостью все вокруг станут закидывать друг друга горстями бумаги и пытаться выбраться из
        этого плена! Праздник в одно мгновение станет смешным и невероятно весёлым.</string>
    <string name="s_tesla_content">\n\ Электричество, которое так хорошо нам знакомо, до сих пор
        хранит в себе множество тайн. Раскрыть его удивительные секреты поможет наше уникальное
        представление. Детей ждёт зрелищное путешествие в волшебный мир науки, где каждый сможет
        почувствовать свои суперспособности!\n Восторгу и удивлению ребят не будет предела, когда
        они смогут потрогать фиолетовую вспышку молнии! Или зажечь огромную лампочку прямо в воздухе
        безо всяких проводов! Такой увлекательной науки точно не будет в школе – всё это можно
        увидеть лишь на нашем шоу.</string>
    <string name="s_fire_content">\n\ Пиротехническое представление – это необычное и поистине
        впечатляющее решение для любого праздника. Каждый присутствующий увидит, насколько ловко
        можно обращаться с неприступной стихией. Языки пламени взметнутся в воздух и озарят темноту
        ярким светом!\n Наши профессиональные артисты удивят всех своим мастерством. На празднике
        словно по волшебству вспыхнут замысловатые огненные узоры. От буйства укрощённого огня будет
        просто невозможно оторвать взгляд!</string>
    <string name="s_bubbles_url" translatable="false">https://prazdnik-raduga.ru/shou-programmy/mylnye-puzyri/</string>
    <string name="s_chemistry_url" translatable="false">https://prazdnik-raduga.ru/shou-programmy/himicheskoe-shou/</string>
    <string name="s_paper_url" translatable="false">https://prazdnik-raduga.ru/shou-programmy/bumazhnoe-shou/</string>
    <string name="s_tesla_url" translatable="false">https://prazdnik-raduga.ru/shou-programmy/tesla-shou/</string>
    <string name="s_fire_url" translatable="false">https://prazdnik-raduga.ru/shou-programmy/faer-shou/</string>
    <string name="m_coffee_title">Кофейные куклы</string>
    <string name="p_program">Программа</string>
    <string name="p_price">Цена</string>
    <string name="p_animator">Аниматор</string>
    <string name="p_animator_p">3000руб</string>
    <string name="p_animator_vip">VIP аниматор</string>
    <string name="p_animator_vip_p">от 3500руб</string>
    <string name="p_master_10">Мастер классы (10 детей)</string>
    <string name="p_master_10_p">от 3500руб</string>
    <string name="p_master_25">Мастер классы (25 детей)</string>
    <string name="p_master_25_p">от 16000руб</string>
    <string name="p_master_100">Мастер классы (100 детей)</string>
    <string name="p_master_100_p">от 62000руб</string>
    <string name="p_show_lite">Шоу лайт</string>
    <string name="p_show_lite_p">3500руб</string>
    <string name="p_show_standard">Шоу стандарт</string>
    <string name="p_show_standard_p">5000руб</string>
    <string name="p_show_vip">Шоу VIP</string>
    <string name="p_show_vip_p">7000руб</string>
    <string name="p_bubbles">+ оформление шарами</string>
    <string name="p_bubbles_p">от 3500руб</string>
    <string name="p_cake">+ торт</string>
    <string name="p_cake_p">от 3000руб</string>
    <string name="p_pets">+ дрессированные животные</string>
    <string name="p_pets_p">от 8000руб</string>
    <string name="p_photo">Фото оператор (1 час)</string>
    <string name="p_photo_p">3000руб</string>
    <string name="p_video">Видео оператор (1 час)</string>
    <string name="p_video_p">4000руб</string>
    <string name="address">Наш адрес - Москва,\n2-я Рощинская, дом 3</string>
</resources>