<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/top_menu_call"
        android:title="@string/order"
        android:icon="@drawable/call_icon_white"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/top_menu_share"
        android:title="@string/share"
        app:showAsAction="never"
        android:orderInCategory="0"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/top_menu_show_in_browser"
        android:title="@string/in_browser"
        app:showAsAction="never"
        android:orderInCategory="1"
        android:icon="@drawable/browser_icon_white"
        />

</menu>