<LinearLayout
    tools:context=".Other2ndActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="center_horizontal"
        android:text="@string/address"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableEnd="@drawable/call_icon_purple"
        android:drawablePadding="8dp"
        android:onClick="onClickStringCall"
        android:text="@string/phone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/redText"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableEnd="@drawable/msg_icon_yellow"
        android:drawablePadding="8dp"
        android:onClick="onClickStringMsg"
        android:text="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/purpleDarkText"
        android:textStyle="italic" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/text_margin" />

</LinearLayout>